ライセンスについて追加

--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
         <a href="reference.html" target="_blank" class="button-like-link">組み込み方の参考ページ</a>
       </li>
     </ul>
+    <div>ライセンスについて</div>
+    <div>このツールは MIT ライセンスで公開されています。自由に改変・再配布が可能です。</div>
+    <div>githubリンク</div>
+    <div><a href="https://github.com/ChaosReadman/anyPathProgress" target="_blank">https://github.com/ChaosReadman/anyPathProgress</a></div>
   </div>
 
   <div id="canvasContainer">
